CRUD for deps
